# bookstore

./: Dockerfile  docker-compose.yml  pyproject.toml
src/authors/: models.py  serializers.py  urls.py  views.py
src/authors/migrations/: 0001_initial.py  0002_author_authors_first_n_1a169e_idx_and_more.py
src/books/: models.py  paginations.py  urls.py  views.py
src/books/migrations/: 0001_initial.py  0002_book_books_title_7a737c_idx_and_more.py
src/config/: settings.py  urls.py
src/tasks/: decorators.py  models.py  tasks.py
src/tasks/management/commands/: complete_tasks.py  create_tasks.py
src/tasks/migrations/: 0001_initial.py
